--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
 
     <dimen name="account_header_size">56dp</dimen>
     <dimen name="avatar_size">40dp</dimen>
+    <dimen name="btn_corner_radius">28dp</dimen>
 
 </resources>
